--- a/plugin.yml
+++ b/plugin.yml
@@ -1,30 +1,33 @@
 name: PlayerWarpsUI
-main: XeonCh\PlayerWarps
+main: XeonCh\PlayerWarpsUI\PlayerWarps
+src-namespace-prefix: XeonCh\PlayerWarpsUI
 version: 1.0.0
 api: 4.0.0
-author: XeonCh & Dhnz
+author: 
+- XeonCh
+- dhnnz
 depend: EconomyAPI
 
 commands:
   pwarp:
     description: "Player warp command"
-    permission: pwarp.cmd
+    permission: playerwarpsui.pwarp.cmd
 permissions:
-   pwarp.cmd:
+   playerwarpsui.pwarp.cmd:
      default: true
      description: "Main command"
-   pwarp.create:
+   playerwarpsui.pwarp.create:
      default: op
      description: "Create pwarp"
-   pwarp.delete:
+   playerwarpsui.pwarp.delete:
      default: op
      description: "Delete Pwarp"
-   pwarp.newpos:
+   playerwarpsui.pwarp.newpos:
      default: op
      description: "Create new pos pwarp"
-   pwarp.info:
+   playerwarpsui.pwarp.info:
      default: op
      description: "Show info pwarp"
-   pwarp.help:
+   playerwarpsui.pwarp.help:
      default: true
      description: "Show help command"
