--- a/resources/config.yml
+++ b/resources/config.yml
@@ -18,6 +18,13 @@
 #PREFIX MESSAGE
 Prefix: "§7[§ePlayerWarps§7] "
 
+# ECONOMY PROVIDER
+# ecomomys,economyapi (EconomyAPI)
+# bedrockeconomy (BedrockEconomy)
+# xp,exp,experience (Exp)
+economy:
+  provider: economyapi
+  
 #NO PERMISSIONS CHAT
 no-permission: "§cYou dont have permission to use this command"
 
